fixing colors and spacing

--- a/gardenplan.css
+++ b/gardenplan.css
@@ -48,7 +48,7 @@ html, body{
 
 .peas1:hover {
     color:#fffbfb;
-    background-color:rgb(134, 176, 134 );
+    background-color: #73AE74;
     border: none;
 }
 
@@ -69,7 +69,7 @@ html, body{
   
 .peas2:hover {
   color:white;
-  background-color:rgb(134, 176, 134 );
+  background-color:#73AE74 ;
   border: none;
   }
 
@@ -90,7 +90,7 @@ html, body{
     
 .peas3:hover {
   color:#fffbfb;
-  background-color:rgb(134, 176, 134 );
+  background-color:#73AE74 ;
   border: none;
     }
 
@@ -111,7 +111,7 @@ html, body{
       
 .peas4:hover {
   color:#fffbfb;
-  background-color:rgb(134, 176, 134 );
+  background-color:#73AE74 ;
   border: none;
 }
 
@@ -379,15 +379,17 @@ html, body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  line-height: 0.25rem;
+ 
 }
 
 h2 {
   color: rgb(71, 119, 71);
+  margin: 0.25rem;
 }
 
 h3 {
   color: rgb(134, 176, 134);
+  margin: 0.25rem;
 }
 
 footer {
